--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -5,22 +5,27 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
     "formik": "^2.4.2",
+    "immutable": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "react-virtualized": "^9.22.5",
+    "react-window": "^1.8.9",
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --port 3001",
+    "dev": "webpack-dev-server --port 3001",
     "build-bundle": "webpack --mode=development"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1",
+    "css-loader": "^6.8.1",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
