--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -5,11 +5,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "formik": "^2.4.2",
     "immutable": "^4.3.1",
     "react": "^18.2.0",
+    "react-addons-create-fragment": "^15.6.2",
     "react-dom": "^18.2.0",
+    "react-height": "^3.0.2",
     "react-router-dom": "^6.14.2",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
