--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	  "dev":"node src/server.js"
+    "dev": "node src/server.js",
+    "schema-load": "node src/schemaloader/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bson": "^5.4.0",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
