--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node src/server.js",
-    "schema-load": "node src/schemaloader/index.js"
+    "import-employees": "node test/NewCodeTest.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,10 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
+    "moment": "^2.29.4",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.5.2",
+    "mongoose-connect-db": "^1.4.4",
+    "xlsx": "^0.18.5"
   }
 }
