--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "formik": "^2.4.2",
@@ -16,6 +17,7 @@
     "react-router-dom": "^6.14.2",
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
+    "reactstrap": "^9.2.1",
     "yup": "^1.2.0"
   },
   "scripts": {
