--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bson": "^5.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "lodash.assign": "^4.2.0",
+    "lodash.clone": "^4.5.0",
     "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.5.2",
