--- a/hrms-dataloader/package.json
+++ b/hrms-dataloader/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "hrms-server",
+  "name": "hrms-dataloader",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node src/server.js"
+	"import-employees": "node test/NewCodeTest.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "bson": "^5.4.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+  "dependencies":{
+   "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-    "express": "^4.18.2",
-    "lodash.assign": "^4.2.0",
+	    "lodash.assign": "^4.2.0",
     "lodash.clone": "^4.5.0",
-    "moment": "^2.29.4",
+	    "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.5.2",
     "mongoose-connect-db": "^1.4.4",
