--- a/hrms-dataloader/.env
+++ b/hrms-dataloader/.env
@@ -4,5 +4,7 @@ DB_USERNAME=ashtapadiuser
 DB_PASSWORD=ashtapadiuser
 DB_CLUSTER_NAME=cluster0
 DB_NAME=ashtapadidb
-MONGODB_URI=mongodb+srv://$DB_USERNAME:$DB_PASSWORD@$DB_CLUSTER_NAME.aoyllgk.mongodb.net/?retryWrites=true&w=majority
-basePath=C:/HRMS/hrms/documents
+MONGODB_URI=mongodb+srv://$DB_USERNAME:$DB_PASSWORD@$DB_CLUSTER_NAME.aoyllgk.mongodb.net/$DB_NAME?retryWrites=true&w=majority
+basePath=D:/Work/Personal/HRMS/hrms/documents
+
+COMPANIES=IBS,Alliance,UST
