--- a/hrms-server/.env
+++ b/hrms-server/.env
@@ -7,3 +7,4 @@ DB_NAME=ashtapadidb
 MONGODB_URI=mongodb+srv://$DB_USERNAME:$DB_PASSWORD@$DB_CLUSTER_NAME.aoyllgk.mongodb.net/$DB_NAME?retryWrites=true&w=majority
 
 basePath=D:/Work/Personal/HRMS/hrms/documents
+COMPANIES=IBS,Alliance,UST
