--- a/hrms-client/package.json
+++ b/hrms-client/package.json
@@ -18,6 +18,7 @@
     "react-virtualized": "^9.22.5",
     "react-window": "^1.8.9",
     "reactstrap": "^9.2.1",
+    "recoil": "^0.7.7",
     "yup": "^1.2.0"
   },
   "scripts": {
