--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^8.0.3",
     "mongoose-connect-db": "^1.4.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "immutable": "^4.3.1"
   }
 }
