--- a/hrms-dataloader/package.json
+++ b/hrms-dataloader/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"import-employees": "node test/NewCodeTest.js"
+    "import-employees": "node test/NewCodeTest.js",
+    "write": "node test/export/WriteFileTest.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies":{
-   "dotenv": "^16.3.1",
+  "dependencies": {
+    "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
-	    "lodash.assign": "^4.2.0",
+    "lodash.assign": "^4.2.0",
     "lodash.clone": "^4.5.0",
-	    "moment": "^2.29.4",
+    "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.5.2",
     "mongoose-connect-db": "^1.4.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   }
 }
