--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "immutable": "^4.3.1",
     "lodash.assign": "^4.2.0",
     "lodash.clone": "^4.5.0",
     "moment": "^2.29.4",
@@ -23,6 +24,6 @@
     "mongoose": "^8.0.3",
     "mongoose-connect-db": "^1.4.4",
     "xlsx": "^0.18.5",
-    "immutable": "^4.3.1"
+    "xlsx-js-style": "^1.2.0"
   }
 }
