--- a/hrms-server/.env
+++ b/hrms-server/.env
@@ -1,10 +1,9 @@
 PORT=3000
 
-DB_USERNAME=ashtapadiuser
-DB_PASSWORD=ashtapadiuser
-DB_CLUSTER_NAME=cluster0
-DB_NAME=ashtapadidb
-MONGODB_URI=mongodb+srv://$DB_USERNAME:$DB_PASSWORD@$DB_CLUSTER_NAME.aoyllgk.mongodb.net/$DB_NAME?retryWrites=true&w=majority
+DB_USERNAME=hrms
+DB_PASSWORD=hrms123
+DB_CLUSTER_NAME=sharedcluster-0
+DB_NAME=hrmsdev
+MONGODB_URI=mongodb+srv://$DB_USERNAME:$DB_PASSWORD@$DB_CLUSTER_NAME.0xoiqhh.mongodb.net/$DB_NAME?retryWrites=true&w=majority
 
 basePath=D:/Work/Personal/HRMS/hrms/documents
-COMPANIES=IBS,Alliance,UST
