--- a/hrms-server/package.json
+++ b/hrms-server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +23,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^8.0.3",
     "mongoose-connect-db": "^1.4.4",
+    "nodemon": "^3.0.3",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   }
